gen model controller

--- a/app/views/faceposts/_form.html.erb
+++ b/app/views/faceposts/_form.html.erb
@@ -1,22 +1,7 @@
-<%= form_with(model: facepost) do |form| %>
-  <% if facepost.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(facepost.errors.count, "error") %> prohibited this facepost from being saved:</h2>
-
-      <ul>
-        <% facepost.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :post %>
-    <%= form.text_area :post %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+<%=simple_form_for(:facepost) do |f|%>
+<%=f.error_notification%>
+<div class="container">
+<%=f.input :post,label:"Post about it", input_html:{class:"textarea"},wrapper: false,lable_html:{class:"label"},placeholder:"Compose a new post...",autofocus:true%>
+<%= f.button :submit , class:"button is-info"%>
+</div>
+<%end%>
