--- a/app/views/faceposts/index.html.erb
+++ b/app/views/faceposts/index.html.erb
@@ -1,27 +1,14 @@
-<p id="notice"><%= notice %></p>
+<section class="section">
+<div class="container">
+<div class="columns">
 
-<h1>Faceposts</h1>
+<%# <%= render "profile"%>
 
-<table>
-  <thead>
-    <tr>
-      <th>Post</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<%# <%= render "trends"%> 
+<%# <%end%>
+<%= render 'feed'%>
+<%# <%= render 'who-to-follow' %>
+</div>
+</div>
+</section>
 
-  <tbody>
-    <% @faceposts.each do |facepost| %>
-      <tr>
-        <td><%= facepost.post %></td>
-        <td><%= link_to 'Show', facepost %></td>
-        <td><%= link_to 'Edit', edit_facepost_path(facepost) %></td>
-        <td><%= link_to 'Destroy', facepost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Facepost', new_facepost_path %>
