--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,31 @@
+<div class="container mx-auto my-4"style="width:300px">
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="field my-2">
+    <%= f.input :name,label:"Name",required: true,input_html: {class: "form-control textarea"},wrapper: false,placeholder:"Enter Your name",label_html:{class:"label"}%>
+  </div>
+ <div class="field my-2">
+      <%= f.input :username,required:true,input_html: {class:"form-control textarea"},wrapper: false,label_html:{class:"label"},placeholder:"Enter Username"%>
+  </div>
+   <div class="field my-2" >
+    <%= f.input :email,required: true,input_html: {class:"form-control textarea floatingInput"},wrapper: false,label_html:{class:"floatingInput"},placeholder:"Enter Your Email"%>
+  </div>
+  
+  <div class="field my-2">
+    <%=f.input :password ,required: true,input_html: {class:"form-control textarea"},wrapper: false,label_html:{class:"lable"},placeholder:"Enter Your Password" ,hint:("#{@minimum_password_length} characters minimum " if @minimum_password_length)%>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="field my-2">
+    <%= f.input :password_confirmation,required: true,input_html: {class:"form-control textarea"},wrapper:false,placeholder:"Enter Your confirm Password",label_html:{class: "label" }%>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="actions my-4">
+    <%= f.submit "Sign up",class:"btn btn-success" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
