--- a/app/views/faceposts/index.html.erb
+++ b/app/views/faceposts/index.html.erb
@@ -1,13 +1,28 @@
 <section class="section">
 <div class="container">
-<div class="columns">
-
-<%# <%= render "profile"%>
-
+<div class="columns d-flex justify-content-evenly">
+<%if user_signed_in?%>
+<div style="width:25%">
+<%= render "profile"%>
+</div>
+<div class="container d-flex justify-content-evenly">
 <%# <%= render "trends"%> 
-<%# <%end%>
+
+<div class="d-flex flex-column" style="width:60%">
+<%= render "faceposts/form" %>
+
+
 <%= render 'feed'%>
-<%# <%= render 'who-to-follow' %>
+
+
+</div>
+<div style="width:25%">
+<%=render "message"%>
+</div>
+</div>
+<%end%>
+
+
 </div>
 </div>
 </section>
