--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,13 @@
   </head>
 
   <body>
+  
    <%if flash[:notice] %>
-    <div class="notification is-primary global-notification">
+    <div class="notification is-primary global-notification",style="position:relative">
     <p class="notice"><%=notice%></p>
     </div>
     <%end%>
-  <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <%# <a class="navbar-brand" href="#">Navbar</a> %>
     <%=link_to root_path,class:"navbar-brand" do%>
@@ -29,17 +30,33 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <%# <a class="nav-link" href="#">Link</a> %>
+          <%=link_to "Friends",friends_path(@friends),class:"nav-link" %>
         </li>
         
         
       </ul>
-      <button class="btn btn-primary">Singup</button>
+    <%if user_signed_in?%>
+    <p class="control">
+    <%= link_to current_user.name,edit_user_registration_path,class:"btn btn-info mx-2"%>
+    </p>
+    <p>
+    <%= link_to "Logout",destroy_user_session_path,method: :delete,class:"btn btn-info"%>
+    </p>
+    <%else%>
+    <p>
+    <%=link_to "Sign In",new_user_session_path,class:"btn btn-info mx-2"%>
+    </p>
+    <p>
+    <%= link_to "Sing Up",new_user_registration_path,class:"btn btn-info"%>
+    </p>
+    <%end%>
+      
     </div>
   </div>
-</nav>
-  
+</nav>  
     <%= yield %>
+    
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
   </body>
