--- a/app/views/faceposts/_profile.html.erb
+++ b/app/views/faceposts/_profile.html.erb
@@ -1,7 +1,15 @@
 <div class="section" >
 <div class="card">
 <div class="card-body">
-<%=current_user.name%>
+<p>
+<b>Name:</b> <%=current_user.name%>
+</p><br/>
+<p>
+<b>Username:</b> <%=current_user.username%>
+</p><br/>
+<p>
+<b>Email:</b> <%=current_user.email%>
+<p><br/>
 </div>
 </div>
 </div>
