--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <%# <a class="nav-link" href="#">Link</a> %>
-          <%=link_to "Friends",friends_path(@friends),class:"nav-link" %>
+          <%=link_to "Friends",friendships_path(@friends),class:"nav-link" %>
         </li>
         
         
