--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,17 +1,21 @@
 <h2>Your Friends</h2>
-
   <% current_user.friendships.each do |friendship| %>
   <%=friendship.friend.email %> 
   (<%= link_to "remove", friendship, :method => :delete %>)
-  <% end %>  
-
-
-<% User.all.each do |user| %>
+  <% end %>  <br/>
+<span>Add friends<span>
+<% @friendships.each do |user| %>
+<%if current_user!=user%>
+<%if !current_user.friends.include?(user)%>
   <div class="user">
     <p>
       <strong><%=user.username %></strong>
       <%= link_to "Add Friend", friendships_path(friend_id: user), :method => :post %>
+      <%else%>
       
-    </p>
+      </p>
   </div>
-<% end %>
+  <%end%>
+  <%end%> 
+  <%end%>
+  
