implement comment ,implement likes , implement association

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,2 @@
-<%Comment.all.each do |com|%>
-<p>
-<%=com.user.name%>: <%=com.comment%> 
-<%=com.created_at.time%>
-</p>
-<%end%>
+
+<%=link_to "delete",@comment,:method=>:delete%>
