--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,13 +1,23 @@
-<div class="container my-4 " >
-<%= simple_form_for(:comments) do |f|%>
-<div class="card">
-<div class="card-body">
-<%=f.input :comment,label:"Comment it", input_html:{class:"textarea form-control" },wrapper: false,lable_html:{class:"label"},placeholder:"Compose a new Comment...",autofocus:true%>
-<%# <%= f.hidden_field :current_user ,value: :id%>
-<%= f.button :submit , class:"btn btn-info my-3"%>
-</div>
-</div>
-
-
-<%end%>
-</div>
+<%# <div class="container my-4 " > %>
+<%# <%= simple_form_for(:comment) do |f|%> 
+<%# <div class="card"> %>
+<%# <div class="card-body"> %>
+<%# <%=f.input :comment,label:"Comment it", input_html:{class:"textarea form-control" },wrapper: false,lable_html:{class:"label"},placeholder:"Compose a new Comment...",autofocus:true%> 
+<%# <%= f.hidden_field :current_user ,value: :id %>
+<%# <%= f.button :submit , class:"btn btn-info my-3"%> 
+<%# </div> %>
+<%# </div> %>
+<%#  %>
+<%#  %>
+<%# <%end%> 
+<%# </div> %>
+<%=form_for(@comment, url: facepost_comments_path) do |form|%>
+<p> 
+<%=form.hidden_field :user_id ,value: current_user.id%>
+<%=form.label :comment%><br>
+<%= form.text_field :comment,class:"textarea form-control"%>
+    
+<%=form.submit :comment, class:"btn btn-info my-3"%>    
+</p>
+<%end%> 
+     
