--- a/app/assets/stylesheets/faceposts.scss
+++ b/app/assets/stylesheets/faceposts.scss
@@ -1,3 +1,35 @@
 // Place all the styles related to the Faceposts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.delete {
+    color: black
+}
+
+.delete:hover {
+    color: red
+}
+
+.edit {
+    color: rgb(0, 0, 0)
+}
+
+.edit:hover {
+    color: green
+}
+
+.comment {
+    color: rgb(0, 0, 0)
+}
+
+.comment:hover {
+    color: green
+}
+
+.section {
+    // position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    // background-color: yellow;
+    // padding: 50px;
+    // font-size: 20px;
+}
