--- a/app/assets/stylesheets/faceposts.scss
+++ b/app/assets/stylesheets/faceposts.scss
@@ -28,7 +28,7 @@
 .section {
     // position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: 80px;
     // background-color: yellow;
     // padding: 50px;
     // font-size: 20px;
