--- a/app/views/faceposts/_profile.html.erb
+++ b/app/views/faceposts/_profile.html.erb
@@ -1,5 +1,5 @@
-<div class="section" >
-<h3>Profile</h3>
+<div class="section" style="border:1px solid gray; border-radius:5px">
+<h3 class="mx-2">Profile</h3>
 <div class="card">
 <div class="card-body d-flex">
 
