--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-  
+   <div class="stnav">
    <%if flash[:notice] %>
     <div class="notification is-primary global-notification",style="position:relative">
     <p class="notice"><%=notice%></p>
@@ -37,17 +37,17 @@
         
       </ul>
     <%if user_signed_in?%>
-    <p class="control">
+    <p class="control my-1">
     <%= link_to current_user.name,edit_user_registration_path,class:"btn btn-info mx-2"%>
     </p>
-    <p>
+    <p class="my-1">
     <%= link_to "Logout",destroy_user_session_path,method: :delete,class:"btn btn-info"%>
     </p>
     <%else%>
-    <p>
+    <p class="my-1" >
     <%=link_to "Sign In",new_user_session_path,class:"btn btn-info mx-2"%>
     </p>
-    <p>
+    <p class="my-1" >
     <%= link_to "Sing Up",new_user_registration_path,class:"btn btn-info"%>
     </p>
     <%end%>
@@ -55,6 +55,7 @@
     </div>
   </div>
 </nav>  
+</div>
     <%= yield %>
     
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
